apply plugin: 'java'

sourceCompatibility = 11.0

group 'com.tollge.modules'

dependencies {
    annotationProcessor 'org.projectlombok:lombok:' + lombok_version
    compile 'com.tollge:tollge:' + tollge_version

    runtime "io.netty:netty-tcnative-boringssl-static:2.0.19.Final"

    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'io.vertx', name: 'vertx-unit', version: vertx_version
}